--- a/Invitation.html
+++ b/Invitation.html
@@ -41,9 +41,7 @@
                 <p class="text-center" id="invites"> Mrs.Sandhiya & Mr.Sai Subramani </p>
                 <p class="text-center" id="req"> request the honour of your presence for our new little home grehapravesam</p>
             </div>
-            <div class="InviteCard d-flex justify-content-center align-items-center">
-                <img class="img img-fluid rounded mx-auto d-block" width=50% src="invitation.png">
-            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12"><img width=100% src="invitation.png"></div>
         </div>
     </section>
 
