--- a/Invitation.html
+++ b/Invitation.html
@@ -39,7 +39,7 @@
         <div class="card shadow-sm p-3 mb-5 bg-white rounded" style="border: None" >
             <div style="margin-top: 40px;" class="container headings text-center">
                 <p class="text-center" style="font-size: 1.3em;" id="invites"> Mrs.Sandhiya & Mr.Sai Subramani </p>
-                <p class="text-center" id="req"> Request the honour of your presence for our new little home grehapravesam</p>
+                <p class="text-center" id="req"> Request the honour of your presence for our new little home grehapravesam.</p>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12"><img width=100% src="invitation.png"></div>
         </div>
