--- a/Invitation.html
+++ b/Invitation.html
@@ -50,7 +50,7 @@
 
             <div style="margin-top: 40px; margin-bottom: 30px;" class="InviteCard d-flex justify-content-center align-items-center">
                <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="house_warming.mp4" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" autoplay="false" src="house_warming.mp4" allowfullscreen></iframe>
 </div>
             </div>
         </div>
