--- a/Invitation.html
+++ b/Invitation.html
@@ -20,12 +20,12 @@
                 <div class="col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center ">
                     <div class="card shadow-sm p-3 mb-5 bg-white rounded" style="border: None">
                         <div class="row Hometext">
-                            <div class="col-12 d-flex justify-content-center align-items-center">
+                            <div style="font-size="19px" class="col-12 d-flex justify-content-center align-items-center">
                                 <h1>House warming Invitation</h1>
                             </div>
 
                             <div class="col-12 d-flex justify-content-center align-items-center">
-                               <u> <h2 style="margin-top: 20px;">SAVE THE DATE</h2> </u>
+                               <u> <h2 style="margin-top: 18px;">SAVE THE DATE</h2> </u>
                             </div>
                             <div class="col-12 d-flex justify-content-center align-items-center">
                                 <h3>17th January 2021</h3>
