--- a/Invitation.html
+++ b/Invitation.html
@@ -60,7 +60,7 @@
             <div class="card shadow-sm p-3 mb-5 bg-white rounded" style="border: None" >
 
             <div style="font-size: 15px;" class="test text-center">
-                <h3>We look forward to celebrate with you</h3>
+                <h3>We look forward to celebrate with you!/h3>
             </div>
         <div class="Location d-flex justify-content-center align-items-center">
 
@@ -70,7 +70,7 @@
     </section>
 
     <section>
-         <p class="text-center" style="color: #4682B4" > &#169; Pushpha Saai S</p>
+         <p class="text-center" style="color: #4682B4" > &#169; Pushpha Saai</p>
     </section>
 
 
